added my littlte system repair toolkit to the toolbox

--- a/Config/config.json
+++ b/Config/config.json
@@ -47,6 +47,11 @@
       "resolveNames": true,
       "httpBanner": true
     },
+    "systemRepair": {
+      "runRemote": true,
+      "defaultComputerName": null,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair"
+    },
     "output": {
       "writeTable": true,
       "encoding": "UTF8"
