finally fixed loading bugs after refactoring to be more modular

--- a/Config/config.json
+++ b/Config/config.json
@@ -31,6 +31,7 @@
       "includeTimestamps": true,
       "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
       "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
+      "logFile": "TechToolbox.log",
       "minimumLevel": "Info"
     },
     "dnsLogging": {
