--- a/Config/config.json
+++ b/Config/config.json
@@ -61,7 +61,9 @@
       "defaultPort": 80,
       "exportCsv": true,
       "resolveNames": true,
-      "httpBanner": true
+      "httpBanner": true,
+      "logFile": "SubnetScan.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan"
     },
     "systemRepair": {
       "runRemote": true,
@@ -91,7 +93,8 @@
       "promptForCredentials": true,
       "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
       "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
-      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log"
+      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
+      "logFile": "RemoteSoftwareInventory.log"
     },
     "compliance": {
       "searchBatchSize": 50,
@@ -103,7 +106,8 @@
       "defaultPolicyType": "Delta",
       "allowKerberos": true,
       "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync"
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
+      "logFile": "AADSync.log"
     },
     "exchangeOnline": {
       "autoConnect": true,
@@ -142,7 +146,9 @@
       "includeCache": true,
       "skipLocalStorage": false,
       "defaultBrowser": "All",
-      "defaultProfiles": null
+      "defaultProfiles": null,
+      "logFile": "BrowserCleanup.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup"
     },
     "pagefile": {
       "defaultPath": "C:\\pagefile.sys",
