Fixed Subnet scan and Purge after the refactor to the module.

--- a/Config/config.json
+++ b/Config/config.json
@@ -63,7 +63,8 @@
       "resolveNames": true,
       "httpBanner": true,
       "logFile": "SubnetScan.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan"
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
+      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan"
     },
     "systemRepair": {
       "runRemote": true,
