--- a/Config/config.json
+++ b/Config/config.json
@@ -218,7 +218,7 @@
     },
     "offboarding": {
       "disabledOU": "OU=Disabled Users,OU=Corp,DC=company,DC=com",
-      "useHybridAutoDisable": true
+      "useHybridAutoDisable": false
     }
   }
 }
