added a search function that returns large files for analysis when low disk space alerts are triggered

--- a/Config/config.json
+++ b/Config/config.json
@@ -223,6 +223,12 @@
       "logFileNameFormat": "Offboarding_{yyyyMMdd}.log",
       "logFile": "Offboarding.log",
       "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding"
+    },
+    "largeFileSearch": {
+      "DefaultSearchDirectory": ["C:\\", "D:\\"],
+      "DefaultMinSizeMB": 256,
+      "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch",
+      "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv"
     }
   }
 }
