--- a/Config/config.json
+++ b/Config/config.json
@@ -1,193 +1,163 @@
 {
-  "paths": {
-    "temp": "C:\\Temp\\TechToolbox",
-    "logs": "C:\\LogsAndExports\\TechToolbox\\Logs",
-    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports"
-  },
-
-  "Dependencies": [
-    {
-      "Name": "ExchangeOnlineManagement",
-      "Version": "3.9.0",
-      "Bundled": true,
-      "Required": true,
-      "Defer": true
-    }
-  ],
-
   "settings": {
-    "defaults": {
-      "promptForHostname": true,
-      "promptForCredentials": true,
-      "promptForDateRanges": true,
-      "promptForCaseName": true,
-      "promptForSearchName": true,
-      "promptForKqlQuery": true,
-      "promptForContentMatchQuery": true,
-      "showProgress": true
-    },
-    "passwords": {
-      "default": {
-        "style": "Readable",
-        "length": 12,
-        "digits": 2,
-        "separator": ""
+    "userSearch": {
+      "licenseMap": {
+        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
+        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
+        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
+        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
+        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
+        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
+        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
+        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3",
+        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
+        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
+        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
+        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
+        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
+        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3",
+        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
+        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2"
       },
-      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt"
+      "includeTeams": true,
+      "includeEXO": true
     },
-    "logging": {
-      "enableConsole": true,
-      "enableFileLogging": true,
-      "includeTimestamps": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
-      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
-      "logFile": "TechToolbox.log",
-      "minimumLevel": "Info"
+    "downloadsCleanup": {
+      "dryRun": false,
+      "includeExtensions": null,
+      "excludeExtensions": [
+        ".pst",
+        ".ost"
+      ],
+      "cutoffYear": 2024
     },
-    "dnsLogging": {
-      "enabled": true,
-      "autoEnableDiagnostics": true,
-      "parseMode": "simple",
-      "maxLogSizeMB": 50,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS"
-    },
-    "copyDirectory": {
-      "runRemote": true,
-      "defaultComputerName": null,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
-      "retryCount": 2,
-      "waitSeconds": 5,
-      "copyFlags": ["/E", "/COPYALL"],
-      "mirror": false
-    },
-    "subnetScan": {
-      "pingTimeoutMs": 250,
-      "tcpTimeoutMs": 500,
-      "httpTimeoutMs": 1000,
-      "ewmaAlpha": 0.15,
-      "displayAlpha": 0.1,
-      "defaultPort": 80,
-      "exportCsv": true,
-      "resolveNames": true,
-      "httpBanner": true,
-      "logFile": "SubnetScan.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
-      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan"
-    },
-    "systemRepair": {
-      "runRemote": true,
-      "defaultComputerName": null,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log"
+    "purview": {
+      "autoDisconnectPrompt": true,
+      "autoConnect": true,
+      "search": {
+        "delaySeconds": 10,
+        "maxAttempts": 40
+      },
+      "registrationPollSeconds": 3,
+      "purge": {
+        "pollSeconds": 5,
+        "requireConfirmation": true,
+        "timeoutSeconds": 1200
+      },
+      "promptForContentMatchQuery": true,
+      "registrationWaitSeconds": 90,
+      "defaultAllMailboxes": true
     },
     "windowsUpdate": {
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
+      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log",
       "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
-      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log"
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate"
     },
-    "windowsActivation": {
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
-      "logFileNameFormat": "ActivationInfo_{computer}_{yyyyMMdd-HHmmss}.txt"
+    "teams": {
+      "includeInOffboarding": true
     },
-    "output": {
-      "writeTable": true,
-      "encoding": "UTF8"
-    },
-    "remoteSoftwareInventory": {
-      "includeAppx": false,
-      "consolidated": false,
-      "throttleLimit": 32,
-      "promptForCredentials": true,
-      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
-      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
-      "logFile": "RemoteSoftwareInventory.log"
+    "systemSnapshot": {
+      "includeRoles": true,
+      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
+      "includeServices": true
     },
     "compliance": {
       "searchBatchSize": 50,
       "purgeBatchSize": 25,
       "maxRetryAttempts": 3
     },
-    "aadSync": {
-      "defaultPort": 5985,
-      "defaultPolicyType": "Delta",
-      "allowKerberos": true,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "logFile": "AADSync.log"
-    },
-    "exchangeOnline": {
-      "autoConnect": true,
-      "autoDisconnectPrompt": true,
-      "showProgress": true,
-      "includeInOffboarding": true
-    },
-    "messageTrace": {
-      "promptForMissingInputs": true,
-      "defaultLookbackHours": 48,
-      "autoExport": true,
-      "timestampFormat": "yyyyMMdd-HHmmss",
-      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
-      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv",
-      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces"
-    },
-    "batteryReport": {
-      "reportPath": "C:\\Temp\\battery-report.html",
-      "outputJson": "C:\\Temp\\installed-batteries.json",
-      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
-      "waitTimeoutSeconds": 10
-    },
-    "purview": {
-      "autoConnect": true,
-      "autoDisconnectPrompt": true,
-      "defaultAllMailboxes": true,
-      "registrationWaitSeconds": 90,
-      "registrationPollSeconds": 3,
-      "promptForContentMatchQuery": true,
-      "search": {
-        "maxAttempts": 40,
-        "delaySeconds": 10
-      },
-      "purge": {
-        "timeoutSeconds": 1200,
-        "pollSeconds": 5,
-        "requireConfirmation": true
-      }
+    "remoteSoftwareInventory": {
+      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
+      "consolidated": false,
+      "logFile": "RemoteSoftwareInventory.log",
+      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
+      "promptForCredentials": true,
+      "includeAppx": false,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
+      "throttleLimit": 32
     },
     "browserCleanup": {
-      "killProcesses": true,
-      "sleepAfterKillMs": 1500,
       "includeCookies": true,
+      "killProcesses": true,
       "includeCache": true,
-      "skipLocalStorage": false,
-      "defaultBrowser": "All",
-      "defaultProfiles": null,
+      "sleepAfterKillMs": 1500,
       "logFile": "BrowserCleanup.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup"
+      "skipLocalStorage": false,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup",
+      "defaultBrowser": "All",
+      "defaultProfiles": null
     },
-    "pagefile": {
-      "defaultPath": "C:\\pagefile.sys",
-      "minSizeMB": 16,
-      "maxSizeMB": 2097152
-    },
-    "downloadsCleanup": {
-      "cutoffYear": 2024,
-      "includeExtensions": null,
-      "excludeExtensions": [".pst", ".ost"],
-      "dryRun": false
+    "logging": {
+      "enableConsole": true,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
+      "minimumLevel": "Info",
+      "includeTimestamps": true,
+      "logFile": "TechToolbox.log",
+      "enableFileLogging": true,
+      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log"
     },
     "tenant": {
-      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
-      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
-      "organizationName": "valueaddedcompanies.onmicrosoft.com",
-      "authorityUrl": "https://login.microsoftonline.com",
       "defaultUsageLocation": "US",
-      "defaultMailboxLanguage": "en-US",
-      "upnSuffix": "vadtek.com"
+      "organizationName": "valueaddedcompanies.onmicrosoft.com",
+      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
+      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "upnSuffix": "vadtek.com",
+      "authorityUrl": "https://login.microsoftonline.com",
+      "defaultMailboxLanguage": "en-US"
+    },
+    "aadSync": {
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
+      "defaultPort": 5985,
+      "logFile": "AADSync.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
+      "allowKerberos": true,
+      "defaultPolicyType": "Delta"
+    },
+    "offboarding": {
+      "includeEXO": true,
+      "useHybridAutoDisable": true,
+      "disabledOU": "",
+      "logFile": "Offboarding.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
+      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log",
+      "cleanupADGroups": false,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding"
+    },
+    "systemRepair": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
+      "runRemote": true,
+      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log",
+      "defaultComputerName": null,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair"
+    },
+    "exchangeOnline": {
+      "autoDisconnectPrompt": true,
+      "includeInOffboarding": true,
+      "autoConnect": true,
+      "showProgress": true
+    },
+    "passwords": {
+      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt",
+      "domainAdminCred": {
+        "username": "",
+        "password": ""
+      },
+      "default": {
+        "style": "Readable",
+        "separator": "",
+        "length": 12,
+        "digits": 2
+      }
+    },
+    "output": {
+      "writeTable": true,
+      "encoding": "UTF8"
+    },
+    "batteryReport": {
+      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
+      "reportPath": "C:\\Temp\\battery-report.html",
+      "outputJson": "C:\\Temp\\installed-batteries.json",
+      "waitTimeoutSeconds": 10
     },
     "naming": {
       "upnPattern": "flast",
@@ -200,63 +170,81 @@
         "manager"
       ]
     },
-    "systemSnapshot": {
-      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
-      "includeRoles": true,
-      "includeServices": true
+    "subnetScan": {
+      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan",
+      "exportCsv": true,
+      "httpBanner": true,
+      "resolveNames": true,
+      "httpTimeoutMs": 1000,
+      "ewmaAlpha": 0.15,
+      "displayAlpha": 0.1,
+      "pingTimeoutMs": 250,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
+      "defaultPort": 80,
+      "tcpTimeoutMs": 500,
+      "logFile": "SubnetScan.log"
     },
-    "userSearch": {
-      "includeEXO": true,
-      "includeTeams": true,
-      "licenseMap": {
-        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
-        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2",
-        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
-
-        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
-        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
-        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
-
-        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
-        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
-
-        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3",
-        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
-
-        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
-
-        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
-
-        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
-        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
-
-        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
-        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3"
-      }
+    "pagefile": {
+      "maxSizeMB": 2097152,
+      "minSizeMB": 16,
+      "defaultPath": "C:\\pagefile.sys"
     },
-    "offboarding": {
-      "disabledOU": "",
-      "cleanupADGroups": false,
-      "includeEXO": true,
-      "useHybridAutoDisable": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
-      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log",
-      "logFile": "Offboarding.log",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding"
+    "windowsActivation": {
+      "logFileNameFormat": "ActivationInfo_{computer}_{yyyyMMdd-HHmmss}.txt",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation"
     },
-    "teams": {
-      "includeInOffboarding": true
+    "copyDirectory": {
+      "waitSeconds": 5,
+      "runRemote": true,
+      "copyFlags": [
+        "/E",
+        "/COPYALL"
+      ],
+      "defaultComputerName": null,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
+      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
+      "retryCount": 2,
+      "mirror": false
     },
     "largeFileSearch": {
-      "defaultSearchDirectory": ["C:\\", "D:\\"],
       "defaultMinSizeMB": 256,
+      "defaultSearchDirectory": [
+        "C:\\",
+        "D:\\"
+      ],
       "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch",
       "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv"
     },
+    "defaults": {
+      "showProgress": true,
+      "promptForHostname": true,
+      "promptForDateRanges": true,
+      "promptForKqlQuery": true,
+      "promptForCaseName": true,
+      "promptForCredentials": true,
+      "promptForContentMatchQuery": true,
+      "promptForSearchName": true
+    },
+    "dnsLogging": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS",
+      "maxLogSizeMB": 50,
+      "autoEnableDiagnostics": true,
+      "enabled": true,
+      "parseMode": "simple"
+    },
+    "messageTrace": {
+      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces",
+      "defaultLookbackHours": 48,
+      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
+      "timestampFormat": "yyyyMMdd-HHmmss",
+      "promptForMissingInputs": true,
+      "autoExport": true,
+      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv"
+    },
     "graph": {
       "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
-      "environment": "Global",
-      "profile": "v1.0",
       "scopes": [
         "User.Read.All",
         "Group.ReadWrite.All",
@@ -265,10 +253,25 @@
       ],
       "appOnly": {
         "enabled": false,
-        "clientId": "",
         "certThumbprint": "",
-        "clientSecret": ""
-      }
+        "clientSecret": "",
+        "clientId": ""
+      },
+      "environment": "Global",
+      "profile": "v1.0"
     }
-  }
+  },
+  "paths": {
+    "logs": "C:\\LogsAndExports\\TechToolbox\\Logs",
+    "temp": "C:\\Temp\\TechToolbox",
+    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports"
+  },
+  "Dependencies": {
+    "Bundled": true,
+    "Version": "3.9.0",
+    "Name": "ExchangeOnlineManagement",
+    "Defer": true,
+    "Required": true
+  },
+  "schemaVersion": 1
 }
