--- a/Config/config.json
+++ b/Config/config.json
@@ -1,167 +1,40 @@
 {
   "settings": {
-    "userSearch": {
-      "licenseMap": {
-        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
-        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
-        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
-        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
-        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
-        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
-        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
-        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3",
-        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
-        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
-        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
-        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
-        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
-        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3",
-        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
-        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2"
-      },
-      "includeTeams": true,
-      "includeEXO": true
-    },
-    "downloadsCleanup": {
-      "dryRun": false,
-      "includeExtensions": null,
-      "excludeExtensions": [
-        ".pst",
-        ".ost"
-      ],
-      "cutoffYear": 2024
-    },
-    "purview": {
-      "autoDisconnectPrompt": true,
-      "autoConnect": true,
-      "search": {
-        "delaySeconds": 10,
-        "maxAttempts": 40
-      },
-      "registrationPollSeconds": 3,
-      "purge": {
-        "pollSeconds": 5,
-        "requireConfirmation": true,
-        "timeoutSeconds": 1200
-      },
-      "promptForContentMatchQuery": true,
-      "registrationWaitSeconds": 90,
-      "defaultAllMailboxes": true
-    },
-    "windowsUpdate": {
-      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate"
-    },
-    "teams": {
-      "includeInOffboarding": true
-    },
-    "systemSnapshot": {
-      "includeRoles": true,
-      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
-      "includeServices": true
-    },
-    "compliance": {
-      "searchBatchSize": 50,
-      "purgeBatchSize": 25,
-      "maxRetryAttempts": 3
-    },
-    "remoteSoftwareInventory": {
-      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
-      "consolidated": false,
-      "logFile": "RemoteSoftwareInventory.log",
-      "promptForCredentials": true,
-      "includeAppx": false,
-      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
-      "throttleLimit": 32
-    },
     "browserCleanup": {
-      "defaultBrowser": "All",
-      "killProcesses": true,
-      "includeCache": true,
-      "sleepAfterKillMs": 1500,
-      "logFile": "BrowserCleanup.log",
+      "defaultProfiles": null,
       "skipLocalStorage": false,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup",
+      "includeCache": true,
+      "killProcesses": true,
+      "logFile": "BrowserCleanup.log",
+      "defaultBrowser": "All",
+      "sleepAfterKillMs": 1500,
       "includeCookies": true,
-      "defaultProfiles": null
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\BrowserCleanup"
     },
-    "logging": {
-      "enableConsole": true,
-      "minimumLevel": "Info",
-      "includeTimestamps": true,
-      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
-      "logFile": "TechToolbox.log",
-      "enableFileLogging": true,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs"
+    "pagefile": {
+      "defaultPath": "C:\\pagefile.sys",
+      "minSizeMB": 16,
+      "maxSizeMB": 2097152
     },
-    "tenant": {
-      "defaultUsageLocation": "US",
-      "organizationName": "valueaddedcompanies.onmicrosoft.com",
-      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
-      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
-      "upnSuffix": "vadtek.com",
-      "authorityUrl": "https://login.microsoftonline.com",
-      "defaultMailboxLanguage": "en-US"
+    "dnsLogging": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS",
+      "autoEnableDiagnostics": true,
+      "parseMode": "simple",
+      "enabled": true,
+      "maxLogSizeMB": 50
     },
-    "aadSync": {
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "defaultPort": 5985,
-      "logFile": "AADSync.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
-      "allowKerberos": true,
-      "defaultPolicyType": "Delta"
-    },
-    "offboarding": {
-      "includeEXO": true,
-      "useHybridAutoDisable": true,
-      "disabledOU": "",
-      "logFile": "Offboarding.log",
-      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
-      "cleanupADGroups": false,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding"
-    },
-    "systemRepair": {
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "runRemote": true,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
-      "defaultComputerName": null,
-      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log"
-    },
-    "exchangeOnline": {
-      "autoDisconnectPrompt": true,
-      "includeInOffboarding": true,
-      "autoConnect": true,
-      "showProgress": true
-    },
-    "passwords": {
-      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt",
-      "domainAdminCred": {
-        "username": "",
-        "password": ""
-      },
-      "default": {
-        "style": "Readable",
-        "separator": "",
-        "length": 12,
-        "digits": 2
-      }
-    },
-    "output": {
-      "writeTable": true,
-      "encoding": "UTF8"
-    },
-    "batteryReport": {
-      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
-      "reportPath": "C:\\Temp\\battery-report.html",
-      "outputJson": "C:\\Temp\\installed-batteries.json",
-      "waitTimeoutSeconds": 10
+    "messageTrace": {
+      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
+      "autoExport": true,
+      "promptForMissingInputs": true,
+      "timestampFormat": "yyyyMMdd-HHmmss",
+      "defaultLookbackHours": 48,
+      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces",
+      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv"
     },
     "naming": {
-      "upnPattern": "flast",
       "samPattern": "flast",
+      "upnPattern": "flast",
       "copyAttributes": [
         "description",
         "department",
@@ -170,108 +43,262 @@
         "manager"
       ]
     },
+    "logging": {
+      "minimumLevel": "Info",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs",
+      "logFileNameFormat": "TechToolbox_{yyyyMMdd}.log",
+      "logFile": "TechToolbox.log",
+      "includeTimestamps": true,
+      "enableConsole": true,
+      "enableFileLogging": true
+    },
+    "aadSync": {
+      "defaultPolicyType": "Delta",
+      "logFile": "AADSync.log",
+      "defaultPort": 5985,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync",
+      "allowKerberos": true,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\AADSync"
+    },
+    "windowsUpdate": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsUpdate",
+      "logFileNameFormat": "WindowsUpdate_{yyyyMMdd}.log"
+    },
+    "systemRepair": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\SystemRepair",
+      "logFileNameFormat": "SystemRepair_{yyyyMMdd}.log",
+      "defaultComputerName": null,
+      "runRemote": true
+    },
+    "userSearch": {
+      "licenseMap": {
+        "c7df2760-2c81-4ef7-b578-5b5392b571df": "Microsoft 365 E5",
+        "06ebc4ee-1bb5-47dd-8120-11324bc54e06": "Office 365 E5",
+        "f30db892-07e9-47e9-837c-80727f46fd3d": "Microsoft 365 Business Premium",
+        "6fd2c87f-b296-42f0-b197-1e91e994b900": "Microsoft 365 E3",
+        "4b9405b0-7788-4568-add1-99614e613b69": "Microsoft 365 F3",
+        "e7bfbdf0-0a0b-4d8b-bd3d-7c6f0f2b5c3a": "Visio Plan 2",
+        "9c0dab89-a30c-4117-86e7-97bda240acd2": "Visio Plan 1",
+        "c42b9cae-ea4f-4ab7-9717-81576235ccac": "Exchange Online Plan 2",
+        "e6778190-713e-4e4f-9119-8b8238de25df": "Microsoft 365 Business Basic",
+        "53818b1b-4a27-454b-8896-0dba576410e6": "Project Plan 3",
+        "4b585984-651b-448a-9e53-3b10f069cf7f": "Exchange Online Plan 1",
+        "a4585165-0533-458a-bf7c-5e2d8c699c13": "Project Plan 1",
+        "18181a46-0d4e-45cd-891e-60aabd171b4e": "Microsoft 365 F1",
+        "c2273bd0-dff7-4215-9ef5-2c7bcfb06425": "Microsoft 365 Business Standard",
+        "94763226-9b3c-4e75-a931-5c89701abe66": "Teams Phone Standard",
+        "05e9a617-0261-4cee-bb44-138d3ef5d965": "Office 365 E3"
+      },
+      "includeTeams": true,
+      "includeEXO": true
+    },
+    "tenant": {
+      "clientId": "9c0e43db-f3fc-4bba-9530-10b5d063730b",
+      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "upnSuffix": "vadtek.com",
+      "defaultUsageLocation": "US",
+      "authorityUrl": "https://login.microsoftonline.com",
+      "organizationName": "valueaddedcompanies.onmicrosoft.com",
+      "defaultMailboxLanguage": "en-US"
+    },
+    "largeFileSearch": {
+      "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch",
+      "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv",
+      "defaultMinSizeMB": 256,
+      "defaultSearchDirectory": [
+        "C:\\",
+        "D:\\"
+      ]
+    },
+    "compliance": {
+      "purgeBatchSize": 25,
+      "maxRetryAttempts": 3,
+      "searchBatchSize": 50
+    },
+    "downloadsCleanup": {
+      "cutoffYear": 2024,
+      "dryRun": false,
+      "excludeExtensions": [
+        ".pst",
+        ".ost"
+      ],
+      "includeExtensions": null
+    },
     "subnetScan": {
-      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan",
-      "exportCsv": true,
+      "httpTimeoutMs": 1000,
       "httpBanner": true,
       "resolveNames": true,
-      "httpTimeoutMs": 1000,
-      "ewmaAlpha": 0.15,
-      "displayAlpha": 0.1,
       "pingTimeoutMs": 250,
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
+      "exportDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\SubnetScan",
+      "displayAlpha": 0.1,
       "defaultPort": 80,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\SubnetScan",
       "tcpTimeoutMs": 500,
-      "logFile": "SubnetScan.log"
+      "ewmaAlpha": 0.15,
+      "logFile": "SubnetScan.log",
+      "exportCsv": true
     },
-    "pagefile": {
-      "maxSizeMB": 2097152,
-      "minSizeMB": 16,
-      "defaultPath": "C:\\pagefile.sys"
+    "teams": {
+      "includeInOffboarding": true
     },
-    "windowsActivation": {
-      "logFileNameFormat": "ActivationInfo_{computer}_{yyyyMMdd-HHmmss}.txt",
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation"
+    "offboarding": {
+      "useHybridAutoDisable": true,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
+      "disabledOU": "",
+      "logFile": "Offboarding.log",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Offboarding",
+      "cleanupADGroups": false,
+      "includeEXO": true,
+      "logFileNameFormat": "Offboarding_{yyyyMMdd}.log"
+    },
+    "exchangeOnline": {
+      "showProgress": true,
+      "includeInOffboarding": true,
+      "autoConnect": true,
+      "autoDisconnectPrompt": true
     },
     "copyDirectory": {
+      "retryCount": 2,
+      "defaultComputerName": null,
+      "mirror": false,
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
+      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
       "waitSeconds": 5,
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
       "runRemote": true,
       "copyFlags": [
         "/E",
         "/COPYALL"
-      ],
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "defaultComputerName": null,
-      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\Robocopy",
-      "logFileNameFormat": "Robocopy_{yyyyMMdd}.log",
-      "retryCount": 2,
-      "mirror": false
+      ]
     },
-    "largeFileSearch": {
-      "exportFileNamePattern": "LargeFiles_{yyyyMMdd_HHmmss}.csv",
-      "defaultSearchDirectory": [
-        "C:\\",
-        "D:\\"
-      ],
-      "defaultMinSizeMB": 256,
-      "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports\\LargeFileSearch"
+    "batteryReport": {
+      "debugInfo": "C:\\Temp\\installed-batteries_debug.txt",
+      "outputJson": "C:\\Temp\\installed-batteries.json",
+      "waitTimeoutSeconds": 10,
+      "reportPath": "C:\\Temp\\battery-report.html"
     },
-    "defaults": {
-      "showProgress": true,
-      "promptForHostname": true,
-      "promptForDateRanges": true,
-      "promptForKqlQuery": true,
-      "promptForCredentials": true,
-      "promptForCaseName": true,
-      "promptForContentMatchQuery": true,
-      "promptForSearchName": true
-    },
-    "dnsLogging": {
-      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\DNS",
-      "maxLogSizeMB": 50,
-      "autoEnableDiagnostics": true,
-      "enabled": true,
-      "parseMode": "simple"
-    },
-    "messageTrace": {
-      "defaultExportFolder": "C:\\LogsAndExports\\TechToolbox\\Exports\\MessageTraces",
-      "defaultLookbackHours": 48,
-      "summaryFileNamePattern": "MessageTraceSummary_{0}.csv",
-      "timestampFormat": "yyyyMMdd-HHmmss",
-      "promptForMissingInputs": true,
-      "autoExport": true,
-      "detailsFileNamePattern": "MessageTraceDetails_{0}.csv"
+    "systemSnapshot": {
+      "exportPath": "C:\\LogsAndExports\\TechToolbox\\Exports\\SystemSnapshot",
+      "includeServices": true,
+      "includeRoles": true
     },
     "graph": {
-      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "profile": "v1.0",
+      "appOnly": {
+        "enabled": false,
+        "certThumbprint": "",
+        "clientId": "",
+        "clientSecret": ""
+      },
       "scopes": [
         "User.Read.All",
         "Group.ReadWrite.All",
         "Directory.ReadWrite.All",
         "AuditLog.Read.All"
       ],
-      "appOnly": {
-        "enabled": false,
-        "clientId": "",
-        "clientSecret": "",
-        "certThumbprint": ""
+      "tenantId": "e1b83792-ab2b-418b-9481-fe12c76f201e",
+      "environment": "Global"
+    },
+    "output": {
+      "writeTable": true,
+      "encoding": "UTF8"
+    },
+    "windowsActivation": {
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
+      "logDir": "C:\\LogsAndExports\\TechToolbox\\Logs\\WindowsActivation",
+      "logFileNameFormat": "ActivationInfo_{computer}_{yyyyMMdd-HHmmss}.txt"
+    },
+    "defaults": {
+      "promptForCredentials": true,
+      "promptForDateRanges": true,
+      "promptForCaseName": true,
+      "promptForSearchName": true,
+      "promptForHostname": true,
+      "promptForContentMatchQuery": true,
+      "promptForKqlQuery": true,
+      "showProgress": true
+    },
+    "ad": {
+      "searchBase": "DC=vadtek,DC=com",
+      "resolveGroups": true,
+      "domainController": "DC-1.vadtek.com",
+      "searchScope": "Subtree",
+      "allowMultipleMatches": false,
+      "defaultAttributes": [
+        "displayName",
+        "userPrincipalName",
+        "samAccountName",
+        "mail",
+        "mailNickname",
+        "proxyAddresses",
+        "enabled",
+        "whenCreated",
+        "lastLogonTimestamp",
+        "department",
+        "title",
+        "manager",
+        "memberOf",
+        "distinguishedName",
+        "objectGuid"
+      ],
+      "resolveManager": true,
+      "enableProxyAddressSearch": true,
+      "enableMailSearch": true
+    },
+    "remoteSoftwareInventory": {
+      "consolidated": false,
+      "promptForCredentials": true,
+      "includeAppx": false,
+      "outDir": "C:\\LogsAndExports\\TechToolbox\\Exports\\RemoteSoftwareInventory",
+      "logPath": "C:\\LogsAndExports\\TechToolbox\\Logs\\RemoteSoftwareInventory",
+      "logFileNameFormat": "RemoteSoftwareInventory_{yyyyMMdd}.log",
+      "logFile": "RemoteSoftwareInventory.log",
+      "throttleLimit": 32
+    },
+    "passwords": {
+      "domainAdminCred": {
+        "username": "",
+        "password": ""
       },
-      "environment": "Global",
-      "profile": "v1.0"
+      "wordListPath": "C:\\TechToolbox\\Config\\wordlist.txt",
+      "default": {
+        "length": 12,
+        "separator": "",
+        "style": "Readable",
+        "digits": 2
+      }
+    },
+    "purview": {
+      "autoConnect": true,
+      "registrationWaitSeconds": 90,
+      "defaultAllMailboxes": true,
+      "search": {
+        "delaySeconds": 10,
+        "maxAttempts": 40
+      },
+      "autoDisconnectPrompt": true,
+      "purge": {
+        "pollSeconds": 5,
+        "timeoutSeconds": 1200,
+        "requireConfirmation": true
+      },
+      "promptForContentMatchQuery": true,
+      "registrationPollSeconds": 3
     }
   },
   "paths": {
+    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports",
     "logs": "C:\\LogsAndExports\\TechToolbox\\Logs",
-    "temp": "C:\\Temp\\TechToolbox",
-    "exportDirectory": "C:\\LogsAndExports\\TechToolbox\\Exports"
+    "temp": "C:\\Temp\\TechToolbox"
   },
   "Dependencies": {
-    "Bundled": true,
-    "Version": "3.9.0",
-    "Name": "ExchangeOnlineManagement",
     "Required": true,
-    "Defer": true
+    "Name": "ExchangeOnlineManagement",
+    "Version": "3.9.0",
+    "Defer": true,
+    "Bundled": true
   },
   "schemaVersion": 1
 }
