--- a/Config/config.json
+++ b/Config/config.json
@@ -241,7 +241,8 @@
       "autoDisconnectPrompt": true
     },
     "ai": {
-      "model": "qwen2.5-coder:14b"
+      "model": "qwen2.5-coder:14b",
+      "promptPackPath": "C:\\TechToolbox\\AI\\prompts.json"
     },
     "systemRepair": {
       "runRemote": true,
