Fixing SLOW loading - Next step is to load private functions from each public function (only th ones needed at runtime) instead of dot sourcing everything at module load

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
         "Authenticode",
         "Autodiscover",
         "autofetch",
+        "basenames",
         "batteryreport",
+        "Bggr",
         "bmwh",
         "broobe",
         "catroot",
@@ -42,6 +44,10 @@
         "FGPP",
         "flast",
         "Funs",
+        "GAQUF",
+        "GCCs",
+        "Gocces",
+        "Gswa",
         "hashtables",
         "hdrs",
         "HKCU",
@@ -50,7 +56,9 @@
         "idempotently",
         "IPPS",
         "isatap",
+        "Itnz",
         "jdoe",
+        "JQQMM",
         "Lanman",
         "LASTEXITCODE",
         "leveldb",
