bug fixing and optimizing PSRemoting support for moving worker scripts to remote hosts.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "Damit",
         "ddadmin",
         "dism",
+        "DMTF",
         "Dnscache",
         "dnut",
         "dotjoshjohnson",
@@ -119,6 +120,7 @@
         "startswith",
         "Stroustrup",
         "TCPIP",
+        "timespan",
         "tmpl",
         "unvalidated",
         "valueaddedcompanies",
